k8s-project/spec/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-service
  namespace: default
  labels:
    app: rest-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-service
  template:
    metadata:
      labels:
        app: rest-service
    spec:
      containers:
        - name: rest-service
          image: evggen0904/rest-service:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
#         чтобы не оверрайдить все настройки необходимо указать отдельный профиль для спринга k8s и передать его настройки
          livenessProbe:
            httpGet:
              path: /rest-service/actuator/health/liveness
              port: 9080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /rest-service/actuator/health/readiness
              port: 9080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: rest-service-config

---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  namespace: default
  labels:
    app: db-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service
          image: evggen0904/db-service:2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /db-service/actuator/health/liveness
              port: 9081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /db-service/actuator/health/readiness
              port: 9081
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 9081
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-service
  ports:
    - protocol: TCP
      port: 9081
      targetPort: 9081
